--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ips4-batch-create-forums",
-  "version": "0.1.0",
+  "version": "0.0.1-a",
   "description": "A small tool to batch create forums in NodeJS",
   "main": "src/index.js",
   "scripts": {
@@ -25,6 +25,8 @@
   "dependencies": {
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
-    "winston": "^3.10.0"
+    "minimist": "^1.2.8",
+    "winston": "^3.10.0",
+    "yaml": "^2.3.1"
   }
 }
