default leaves & nodes added into permset parsing
Signed-off-by: blewert <trewelb@gmail.com>

--- a/data/permissions/permissions.yaml
+++ b/data/permissions/permissions.yaml
@@ -15,20 +15,26 @@
 # "perm_7": null
 # -------
 
-adminOnly:
-  view: 4
-  read: 4
-  reply: 4
-  attachments: 4
+# adminOnly:
+#   view: 4
+#   read: 4
+#   reply: 4
+#   attachments: 4
 
-regularPermissions:
-  view: 4,8,7,6,3
-  read: 4,8,7,6,3
-  reply: 4,7,6,3
-  attachments: 4,7,6,3
+# regularPermissions:
+#   view: 4,8,7,6,3
+#   read: 4,8,7,6,3
+#   reply: 4,7,6,3
+#   attachments: 4,7,6,3
 
-default:
+# default:
+#   view: 4,8,7,6,3
+#   read: 4,8,7,6,3
+#   reply: 4,7,6,3
+#   attachments: 4,7,6,3
+
+nodes:
   view: 4,8,7,6,3
-  read: 4,8,7,6,3
-  reply: 4,7,6,3
-  attachments: 4,7,6,3
+  
+leaves:
+  view: 4,8,7,6,3
