--- a/data/permissions/permissions.yaml
+++ b/data/permissions/permissions.yaml
@@ -15,11 +15,12 @@
 # "perm_7": null
 # -------
 
-# adminOnly:
-#   view: 4
-#   read: 4
-#   reply: 4
-#   attachments: 4
+default:
+  view: 4
+  read: 4
+  reply: 4
+  add: 4
+  attachments: 4
 
 # regularPermissions:
 #   view: 4,8,7,6,3
@@ -33,8 +34,9 @@
 #   reply: 4,7,6,3
 #   attachments: 4,7,6,3
 
-nodes:
-  view: 4,8,7,6,3
+
+# nodes:
+#   view: 4,8,7,6,3
   
-leaves:
-  view: 4,8,7,6,3
+# leaves:
+#   view: 4,8,7,6,3
