fixed issues with default profile selected over leaves permission sets; and encodeURI of forum title -- still needs work
Signed-off-by: ben <bwilliams@lincoln.ac.uk>

--- a/data/permissions/permissions.yaml
+++ b/data/permissions/permissions.yaml
@@ -16,19 +16,17 @@
 # -------
 
 default:
-  view: 4
-  read: 4
-  reply: 4
-  add: 4
-  attachments: 4
+  view: 4,8,7,6,3
+  read: 4,8,7,6,3
+
+leaves:
+  view: 4,8,7,6,3
+  read: 4,8,7,6,3
+  reply: 4,7,6,3
+  add: 4,7,6,3
+  attachments: 4,7,6,3
 
 # regularPermissions:
-#   view: 4,8,7,6,3
-#   read: 4,8,7,6,3
-#   reply: 4,7,6,3
-#   attachments: 4,7,6,3
-
-# default:
 #   view: 4,8,7,6,3
 #   read: 4,8,7,6,3
 #   reply: 4,7,6,3
