--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/blewert/ips4-batch-create-forums#readme",
   "dependencies": {
     "axios": "^1.4.0",
+    "chalk": "^4.1.0",
     "dotenv": "^16.3.1",
     "minimist": "^1.2.8",
     "prompts": "^2.4.2",
